Add icon and screenshot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Dapr hat cam 🎩🎥</title>
-
+    <meta property="og:title" content="Dapr hat cam: wear a virtual Dapr top hat!" />
+    <meta property="og:url" content="https://iamdapr.dev" />
+    <meta property="og:image" content="https://iamdapr.dev/screenshot-wide.png" />
+    <link rel="icon" href="favicon.ico" type="image/ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"
         integrity="sha512-bcfltY+lNLlNxz38yBBm/HLaUB1gTV6I0e+fahbF9pS6roIdzUytozWdnFV8ZnM6cSAG5EbmO0ag0a/fLZSG4Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
