Add disclaimer about mobile devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <h1>Dapr hat cam 🎩🎥</h1>
         <p id='status'>Loading...</p>
         <div id='sketch'></div>
-        <p class="small" >Made with ❤️ by <a href="https://marcduiker.dev">Marc Duiker</a> | <a href="https://github.com/marcduiker/i-am-dapr">Source</a> | <a href="https://dapr.io">Dapr website</a> | <a href="https://bit.ly/dapr-discord">Join the Dapr Discord!</a></p>
+        <p class="small">(Doesn't work properly on mobile devices yet)</p>
+        <p class="small">Made with ❤️ by <a href="https://marcduiker.dev">Marc Duiker</a> | <a href="https://github.com/marcduiker/i-am-dapr">Source</a> | <a href="https://dapr.io">Dapr website</a> | <a href="https://bit.ly/dapr-discord">Join the Dapr Discord!</a></p>
     </div>
 </body>
 
