--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
 </head>
 <style>
     body {
-        font-family: 'Ubuntu';
+        font-family: 'Space Grotesk', sans-serif;
         font-size: larger;
         color: #00396d;
     }
@@ -32,7 +33,7 @@
 
 <body>
     <div class="center">
-        <h1>Dapr hat cam 🎩🎥</h1>
+        <!-- <h1>Dapr hat cam 🎩🎥</h1> -->
         <p id='status'>Loading...</p>
         <div id='sketch'></div>
         <p class="small">Doesn't work properly on mobile devices yet.<br>Want to use a different camera? Click on the camera icon in the address bar.</p>
