--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,7 @@
     <meta property="og:title" content="Dapr hat cam: wear a virtual Dapr top hat!" />
     <meta property="og:url" content="https://iamdapr.dev" />
     <meta property="og:image" content="https://iamdapr.dev/screenshot-wide.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://iamdapr.dev/favicon.ico" type="image/ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"
         integrity="sha512-bcfltY+lNLlNxz38yBBm/HLaUB1gTV6I0e+fahbF9pS6roIdzUytozWdnFV8ZnM6cSAG5EbmO0ag0a/fLZSG4Q=="
